[package]
name = "snell-client"
version = "0.1.0"
edition = "2021"
description = "A Snell v5 proxy client with SOCKS5 frontend"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
zeroize = "1"

[profile.release]
lto = true
strip = true
